# Rag_inspector

./: .env.example  .env.production.example  .gitattributes  .gitignore  API_KEYS_GUIDE.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  ENGINEERING_COMPLETION_REPORT.md  ENGINEERING_EVIDENCE_PACKAGE.md  ENTERPRISE_AUDIT_REPORT.md  FINAL_ENGINEERING_REPORT.md  HIRING_VERIFICATION_REPORT.md  LICENSE  Makefile  PART2A_COMPLETION.md  PART2B_COMPLETION.md  PART3A1_COMPLETION.md  PART3A2_COMPLETION.md  PERFORMANCE_BENCHMARK_REPORT.md  PERFORMANCE_REPORT.md  PROJECT_AUDIT.md  PROJECT_GUIDE.md  README.md  ROADMAP.md  SECURITY.md  TEST_REPORT.md  VERIFICATION_REPORT.md  VERIFIED_PERFORMANCE_REPORT.md  VERSION.md  docker-compose.interview.yml  docker-compose.observability.yml  docker-compose.prod.tls.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.verify-ports.yml  docker-compose.yml  render.yaml
backend/: .coveragerc  .dockerignore  Dockerfile  Procfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-otel.txt  requirements.in  requirements.txt
backend/app/: experimental.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  api_scopes.py  config.py  exceptions.py  http_metrics.py  ip_allowlist.py  jwt_denylist.py  logging.py  otel.py  pagination.py  plan_gate.py  rate_limit.py  redis_cache.py  request_id.py  security.py  security_http.py  sentry_init.py  sso_state.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/repositories/: __init__.py  pipelines.py
backend/app/schemas/: schemas.py
backend/app/services/: ai_investigator.py  analysis_pipeline.py  analysis_queue.py  audit.py  autofix.py  bm25_metrics.py  bm25_service.py  chunk_quality.py  context_recall.py  dashboard_cache.py  dashboard_metrics.py  demo_seed.py  document_freshness.py  email_service.py  failure_classifier.py  fix_recommendations.py  grounding.py  hallucination_cost.py  ingest_service.py  knowledge_gap.py  metric_trends.py  mfa.py  ml_models.py  monitoring.py  ragas_service.py  regression.py  retrieval_benchmark.py  slack_alerts.py  studio.py  trust_scorer.py  trustworthiness_service.py  weekly_reports.py  worker_backlog.py
backend/app/workers/: celery_app.py  freshness_worker.py  monitoring_worker.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_v2_new_fields.py  003_email_verification.py  004_webhook_events.py  005_organizations.py  006_enterprise_platform.py  007_security_delivery_billing.py  008_org_enterprise_controls.py  009_fix_subscription_plan_enum.py  010_uuid_columns_to_varchar36.py  012_pipeline_hallucination_cost.py  (+9 more)
backend/scripts/: run_critical_coverage.sh  seed_demo.py  start_api.sh  start_beat.sh  start_worker.sh
backend/tests/: conftest.py  test_api.py
sdk/: README.md  pyproject.toml  setup.py
sdk/raginspector/: __init__.py  client.py  haystack.py  langchain.py  llamaindex.py  py.typed  tracer.py
sdk/tests/: test_client.py  test_framework_adapters.py  test_langchain_callback.py  test_tracer.py
(+398 files in other folders)
