[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raginspector"
version = "1.0.0"
description = "Instrument your RAG pipeline in 3 lines of code"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RAGInspector" }]
keywords = ["rag", "observability", "llm", "tracing", "evaluation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx==0.28.1",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
haystack = ["haystack-ai>=2.0.0"]
all = [
  "langchain-core>=0.2.0",
  "llama-index-core>=0.10.0",
  "haystack-ai>=2.0.0",
]
dev = [
  "pytest>=8.0.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/raginspector/raginspector"
Documentation = "https://github.com/raginspector/raginspector/tree/main/sdk"
Issues = "https://github.com/raginspector/raginspector/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["raginspector*"]

[tool.setuptools.package-data]
raginspector = ["py.typed"]
